# genetic-variants-cloud

./: .dockerignore  .gitignore  Dockerfile.airflow  Dockerfile.pipeline  Makefile  README.md  docker-compose.yml  pyproject.toml  tech-design.md
dags/: __init__.py  vcf_pipeline.py
src/: __init__.py  models.py
src/storage/: __init__.py  base.py  factory.py  gcs.py  local.py
src/streaming/: __init__.py  base.py  factory.py  https.py  local.py
src/tasks/: __init__.py  shard_vcf.py  stream_vcf.py
test_data/: .gitkeep  sample.vcf.gz.tbi
tests/: __init__.py
tests/e2e/: e2e.config
tests/unit/: test_models.py  test_storage.py  test_streaming.py
