[tool.poetry]
name = "genetic-variants-cloud"
version = "0.1.0"
description = "Scalable ETL pipeline for transforming VCF genetic variant data into BigQuery"
authors = ["Michael Alonge"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pysam = "^0.22.0"
pydantic = "^2.0.0"

[tool.poetry.group.airflow]
optional = true

[tool.poetry.group.airflow.dependencies]
apache-airflow = "2.8.0"
apache-airflow-providers-docker = "3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

